src/objects/Split__c.object
<CustomObject>
    <fields>
        <fullName>Deferred_Revenue_Accounting_Code_Type__c</fullName>
        <label>Deferred Revenue Accounting Code Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Accounting_Code__c</fullName>
        <label>Deferred Revenue Accounting Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Split__c</fullName>
        <label>Product Split</label>
        <referenceTo>Product_Split__c</referenceTo>
        <relationshipLabel>Splits</relationshipLabel>
        <relationshipName>Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recognition_Rule__c</fullName>
        <label>Recognition Rule</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recognize revenue over subscription start to end date</fullName>
                    <default>true</default>
                    <label>Recognize revenue over charge effective dates</label>
                </value>
                <value>
                    <fullName>Recognize revenue in period of start date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recognized_Revenue_Accounting_Code_Type__c</fullName>
        <label>Recognized Revenue Accounting Code Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recognized_Revenue_Accounting_Code__c</fullName>
        <label>Recognized Revenue Accounting Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Split</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Split__c</columns>
        <columns>Percentage__c</columns>
        <columns>Recognition_Rule__c</columns>
        <columns>Deferred_Revenue_Accounting_Code__c</columns>
        <columns>Deferred_Revenue_Accounting_Code_Type__c</columns>
        <columns>Recognized_Revenue_Accounting_Code__c</columns>
        <columns>Recognized_Revenue_Accounting_Code_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>